<resources>
    <string name="app_name">Lights Off</string>
    <string name="wakeUpText">I need to WAKE Up at</string>
    <string name="wakeUpText2">No clue when to WAKE UP</string>
    <string name="clockText">Hrs</string>
    <string name="clockTextM">Min</string>
    <string name="buttonDec">-</string>
    <string name="buttonInc">+</string>
    <string name="amPm">AM</string>
    <string name="calculate">CALCULATE</string>
    <string name="calculate2">SLEEP NOW</string>
    <string name="sleepText">YOU SHOULD SLEEP AT</string>
    <string name="sleepText2">YOU SHOULD WAKE UP AT</string>
    <string name="alarm">SET ALARM</string>
    <string name="back">BACK</string>
</resources>
