<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#546E7A"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context="studio.mitra.lightsoff.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wakeUpText"
            android:textColor="#CFD8DC"
            android:textSize="30sp"

            />
        <!--for the time setup -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <!--for the hours setup -->
            <Button
                android:id="@+id/hourButtonDec"
                android:layout_width="36dp"
                android:layout_height="36dp"

                android:background="@drawable/roundbutton"
                android:text="@string/buttonDec"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"

                android:text="@string/clockText"
                android:textColor="#CFD8DC"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hourButtonInc"
                android:layout_width="36dp"
                android:layout_height="36dp"

                android:background="@drawable/roundbutton"
                android:text="@string/buttonInc"
                android:textSize="15sp"
                android:textStyle="bold" />

            <!--for the minutes setup -->
            <Button
                android:id="@+id/minButtonDec"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"

                android:background="@drawable/roundbutton"
                android:text="@string/buttonDec"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/clockTextM"
                android:textColor="#CFD8DC"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minButtonInc"
                android:layout_width="36dp"
                android:layout_height="36dp"

                android:background="@drawable/roundbutton"
                android:text="@string/buttonInc"
                android:textSize="15sp"
                android:textStyle="bold" />
            <!--for the AM/PM setup -->
            <Button
                android:id="@+id/amPmButton"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"

                android:background="@drawable/rounded"
                android:text="@string/amPm"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--The calclulate button -->
        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded"

            android:padding="5dp"
            android:text="@string/calculate"
            android:textSize="25sp" />



    </LinearLayout>
</ScrollView>
